--- a/package.json
+++ b/package.json
@@ -24,18 +24,30 @@
     "update:check": "ng update",
     "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
     "dep-graph": "./node_modules/.bin/nx dep-graph",
-    "help": "./node_modules/.bin/nx help"
+    "help": "./node_modules/.bin/nx help",
+    "coverage": "cat coverage/libs/reactive-entity-store/lcov.info | coveralls"
   },
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-ng-packagr": "~0.13.0",
     "@angular/cli": "7.3.1",
+    "@angular/compiler-cli": "~7.2.0",
+    "@nrwl/builders": "^7.7.2",
     "@nrwl/schematics": "7.8.0",
+    "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
+    "coveralls": "^3.0.3",
     "dotenv": "6.2.0",
+    "jest": "24.1.0",
+    "ng-packagr": "^4.2.0",
+    "prettier": "1.15.2",
+    "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
+    "tsickle": ">=0.34.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "3.2.2",
-    "prettier": "1.15.2"
+    "typescript": "3.2.2"
   }
 }
